[tool.poetry]
name = "somef"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
imbalanced-learn = "^0.11.0"
bs4 = "^0.0.1"
click = "^8.1.7"
click-option-group = "^0.5.6"
markdown = "^3.5.2"
contractions = "^0.1.73"
pandas = "^2.1.4"
nltk = "^3.8.1"
inflect = "^7.0.0"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
rdflib = "^7.0.0"
rdflib-jsonld = "^0.6.2"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
textblob = "^0.17.1"
validators = "^0.22.0"
xgboost = "^2.0.3"
scipy = "^1.11.4"
chardet = "^5.2.0"
pytest = "^7.4.4"
morph-kgc = "^2.6.4"
bibtexparser = "^1.4.1"
nbformat = "^5.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
